@@ -1,3 +1,9 @@
+2015-11-05  Ola Jeppsson  <ola@adapteva.com>
+
+	* multicore/domino.c (main): Move
+	code from interrupt_handler to after call to e_idle().
+	(interrupt_handler): Do nothing.
+
 2015-11-04  Ola Jeppsson  <ola@adapteva.com>
 
 	* multicore/domino.c: New test.
